updated env variable. need JoeDev user

--- a/GettingStarted/.env
+++ b/GettingStarted/.env
@@ -1,2 +1,2 @@
-MSSQL_CONN_STRING="Server=localhost;Integrated Security=true;TrustServerCertificate=true;Database=Northwind;Encrypt=True;"
+MSSQL_CONNECTION_STRING="Server=localhost;Uid='JoeDev';Pwd='Demo12#4';TrustServerCertificate=true;Database=Northwind;Encrypt=True;"
 DAB_ENVIRONMENT=Development
